Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- New vehicle: NIU MQi GT EVO or GT 100 electric scooters (NEVO)
  https://docs.openvehicles.com/en/latest/components/vehicle_niu_gtevo/docs/index.html
- Smart EQ 453:
    TPMS pressure alert settings at Features
    add information commads xsq climate|counter|mtdata|reset|start|total
- Nissan Leaf:
    ZE1 inital release
    Fix: Poll state not set to off when charging stopped by OVMS
    Enh: SOH_instrument now float not int to support ZE1 instrument values 
    Enh: Copy v.b.p.temp.max to v.b.temp so that max battery temp displays in app
- Smart EQ 453:
    DDT4all simple support, a full List of commands at www.smart-EMOTION.de
- VW e-Up (OBD): decode & display battery cell level health status & battery module
    health history, provide v.b.capacity (net capacity in kWh)
  New metrics:
    xvu.b.c.soh               -- Array: SOH [%] of each HV battery cell
    xvu.b.hist.soh.mod.<NN>   -- Array: SOH [%] history of each battery module (NN=01…14/17)
  New web page:
    /xvu/battsoh          -- Battery pack & cell SOH info
- Smart EQ 453:
    add timebased Pre-heat/cool Control 
      - can set at Website -> Smart ED/EQ 4.Gen -> Climate/Heater 
      - at App Features #4: on = 1 off = 2, #5 time like 05:15 = 515, #6 5/10/15 Minutes = 0/1/2
    add GPS powersaving mode at parking
    add 12V alert raised, the car starts the 12V charging process for 15 Minutes
    add Network type switch, option to lock LTE only. Needed, when the Provider has no Datastream at GSM
- CAN: add error flag decoding (included in can status output)
  New commands:
    can <bus> explain [errorflags]    -- Decode error flags into human readable text 
- DBC Files
  Add unit support
  Add extended signals/multiplexing support
  Add support for enum values.
- OVMS Server v3: Ability to define less frequent MQTT communication to save data charges and power
  Events: