@@ -53,6 +53,14 @@ modem* MyModem = NULL;
 ////////////////////////////////////////////////////////////////////////////////
 // General utility functions
 
+#define GPS_SHALL_START() \
+  (m_gps_usermode == GUM_START || (m_gps_usermode == GUM_DEFAULT && m_gps_enabled && \
+    (m_gps_parkpause <= 0 || StdMetrics.ms_v_env_parktime->AsInt() < m_gps_parkpause)))
+#define GPS_SHALL_STOP() \
+  (m_gps_usermode == GUM_STOP || (m_gps_usermode == GUM_DEFAULT && m_gps_enabled && \
+    (m_gps_parkpause > 0 && StdMetrics.ms_v_env_parktime->AsInt() >= m_gps_parkpause)))
+
+
 const char* ModemState1Name(modem::modem_state1_t state)
   {
   switch (state)
@@ -94,6 +102,7 @@ const char* ModemNetRegName(modem::network_registration_t netreg)
     default:                                 return "Unknown";
     };
   }
+
 
 ////////////////////////////////////////////////////////////////////////////////
 // The modem task itself.
@@ -306,6 +315,8 @@ modem::modem(const char* name, uart_port_t uartnum, int baud, int rxpin, int txp
   m_nmea = NULL;
   m_gps_enabled = false;
   m_gps_usermode = GUM_DEFAULT;
+  m_gps_parkpause = 0;
+  m_gps_stopticker = 0;
   m_mux = NULL;
   m_ppp = NULL;
   m_driver = NULL;
@@ -319,6 +330,8 @@ modem::modem(const char* name, uart_port_t uartnum, int baud, int rxpin, int txp
   using std::placeholders::_2;
   MyEvents.RegisterEvent(TAG, "ticker.1", std::bind(&modem::Ticker, this, _1, _2));
   MyEvents.RegisterEvent(TAG, "system.shuttingdown", std::bind(&modem::EventListener, this, _1, _2));
+  MyEvents.RegisterEvent(TAG, "vehicle.on", std::bind(&modem::EventListener, this, _1, _2));
+  MyEvents.RegisterEvent(TAG, "vehicle.off", std::bind(&modem::EventListener, this, _1, _2));
   MyEvents.RegisterEvent(TAG, "config.mounted", std::bind(&modem::ConfigChanged, this, _1, _2));
   MyEvents.RegisterEvent(TAG, "config.changed", std::bind(&modem::ConfigChanged, this, _1, _2));
   ConfigChanged("config.mounted", NULL);
@@ -648,7 +661,8 @@ void modem::State1Enter(modem_state1_t newstate)
 
     case NetWait:
       MyEvents.SignalEvent("system.modem.netwait", NULL);
-      StartNMEA();
+      if (GPS_SHALL_START())
+        StartNMEA();
       break;
 
     case NetStart:
@@ -1457,8 +1471,8 @@ void modem::StopTask()
 
 bool modem::StartNMEA()
   {
-  if ( (m_nmea == NULL) &&
-       (m_gps_usermode == GUM_START || (m_gps_usermode == GUM_DEFAULT && m_gps_enabled)) )
+  OvmsMutexLock lock(&m_gps_mutex);
+  if (m_nmea == NULL)
     {
     if (!m_mux || !m_driver)
       {
@@ -1478,6 +1492,7 @@ bool modem::StartNMEA()
 
 void modem::StopNMEA()
   {
+  OvmsMutexLock lock(&m_gps_mutex);
   if (m_nmea != NULL)
     {
     if (!m_mux || !m_driver)
@@ -1563,12 +1578,18 @@ void modem::SetCellularModemDriver(const char* ModelType)
 
 void modem::Ticker(std::string event, void* data)
   {
+  // Pass ticker event to modem task:
   modem_or_uart_event_t ev;
-
   ev.event.type = TICKER1;
-
   QueueHandle_t queue = m_queue;
   if (queue) xQueueSend(queue,&ev,0);
+
+  // GPS park pause:
+  if (m_gps_stopticker > 0 && --m_gps_stopticker == 0)
+    {
+    ESP_LOGI(TAG, "Scheduled GPS stop");
+    StopNMEA();
+    }
   }
 
 void modem::EventListener(std::string event, void* data)
@@ -1581,6 +1602,23 @@ void modem::EventListener(std::string event, void* data)
       SendSetState1(PoweringOff); // We are not in the task, so queue the state change
       }
     }
+  else if (event == "vehicle.on")
+    {
+    if (!m_nmea && m_gps_enabled && m_gps_usermode == GUM_DEFAULT)
+      {
+      ESP_LOGI(TAG, "Vehicle switched on, starting GPS");
+      StartNMEA();
+      }
+    m_gps_stopticker = 0;
+    }
+  else if (event == "vehicle.off")
+    {
+    if (m_nmea && m_gps_enabled && m_gps_usermode == GUM_DEFAULT && m_gps_parkpause > 0)
+      {
+      ESP_LOGI(TAG, "Vehicle switched off, scheduling GPS stop in %d seconds", m_gps_parkpause);
+      m_gps_stopticker = m_gps_parkpause;
+      }
+    }
   }
 
 void modem::ConfigChanged(std::string event, void* data)
@@ -1590,20 +1628,29 @@ void modem::ConfigChanged(std::string event, void* data)
   if (!param || param->GetName() == "modem")
     {
     bool enable_gps = MyConfig.GetParamValueBool("modem", "enable.gps", false);
+    int gps_parkpause = MyConfig.GetParamValueInt("modem", "gps.parkpause", 0);
     if (event == "config.mounted")
       {
       // Init:
       m_gps_enabled = enable_gps;
+      m_gps_parkpause = gps_parkpause;
       }
-    else if (enable_gps != m_gps_enabled)
+    else if (enable_gps != m_gps_enabled || gps_parkpause != m_gps_parkpause)
       {
       // User changed GPS configuration; translate to status change:
       m_gps_usermode = GUM_DEFAULT;
       m_gps_enabled = enable_gps;
-      if (m_gps_enabled && !m_nmea)
+      m_gps_parkpause = gps_parkpause;
+      if (!m_nmea && GPS_SHALL_START())
         StartNMEA();
-      else if (!m_gps_enabled && m_nmea)
+      else if (m_nmea && GPS_SHALL_STOP())
         StopNMEA();
+      // Adjust stop ticker:
+      if (m_nmea && m_gps_enabled && StdMetrics.ms_v_env_on->AsBool() == false &&
+          StdMetrics.ms_v_env_parktime->AsInt() < m_gps_parkpause)
+        m_gps_stopticker = m_gps_parkpause - StdMetrics.ms_v_env_parktime->AsInt();
+      else
+        m_gps_stopticker = 0;
       }
     }
 
